tests/baselines/reference/parserCastVersusArrowFunction1.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(2,10): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(2,12): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(4,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => 数字', but here has type '<T>(a: 任意) => 数字'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(5,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => 数字', but here has type '<T>(a: 任意, b: 任意) => 数字'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(6,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => 数字', but here has type '<T>(a?: 数字, b?: 数字) => 数字'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(8,10): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(8,13): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(9,10): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(9,13): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(9,13): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(9,16): error TS2304: Cannot find name 'b'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(10,10): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(10,13): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts(10,20): error TS2304: Cannot find name 'b'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts (14 errors) ====
    var v = <T>() => 1;
    var v = <T>a;
             ~
!!! error TS2304: Cannot find name 'T'.
               ~
!!! error TS2304: Cannot find name 'a'.
    
    var v = <T>(a) => 1;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => 数字', but here has type '<T>(a: 任意) => 数字'.
    var v = <T>(a, b) => 1;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => 数字', but here has type '<T>(a: 任意, b: 任意) => 数字'.
    var v = <T>(a = 1, b = 2) => 1;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => 数字', but here has type '<T>(a?: 数字, b?: 数字) => 数字'.
    
    var v = <T>(a);
             ~
!!! error TS2304: Cannot find name 'T'.
                ~
!!! error TS2304: Cannot find name 'a'.
    var v = <T>(a, b);
             ~
!!! error TS2304: Cannot find name 'T'.
                ~
!!! error TS2304: Cannot find name 'a'.
                ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                   ~
!!! error TS2304: Cannot find name 'b'.
    var v = <T>(a = 1, b = 2);
             ~
!!! error TS2304: Cannot find name 'T'.
                ~
!!! error TS2304: Cannot find name 'a'.
                       ~
!!! error TS2304: Cannot find name 'b'.